# glw2

./: .gitignore  CMakeLists.txt  README.md  glw2.files  glw2.includes
GLWLib/inc/: glwcamera.h  glwcontext.h  glwfbo.h  glwfbomanager.h  glwimageloader.h  glwkeyboard.h  glwlight.h  glwmanager.h  glwmouse.h  glwreturncode.h  glwshaderhandle.h  glwshaderprogram.h  glwshaderprogrammanager.h  glwshadervariablehandle.h  glwtexturemanager.h  glwvbo.h  glwvbofactory.h  glwvbomanager.h  glwvertex.h  logger.h  opengl.h  stringformat.h
GLWLib/src/: CMakeLists.txt  glwcamera.cpp  glwcontext.cpp  glwfbo.cpp  glwfbomanager.cpp  glwimageloader.cpp  glwmanager.cpp  glwshaderprogram.cpp  glwshaderprogrammanager.cpp  glwshadervariablehandle.cpp  glwtexturemanager.cpp  glwvbo.cpp  glwvbofactory.cpp
GUILib/inc/: Color.h  Utilities.h  glm.h  guidrawutilities.h  guimanager.h  hlayoutwidget.h  layoutwidget.h  mouseevent.h  vlayoutwidget.h  widget.h
GUILib/src/: CMakeLists.txt  Utilities.cpp  guimanager.cpp  hlayoutwidget.cpp  layoutwidget.cpp  vlayoutwidget.cpp  widget.cpp
Main/inc/: entitymanager.h  lock.h
Main/src/: CMakeLists.txt  entitymanager.cpp  main.cpp  main2.cpp
Main/templates/: main.cpp  main2.cpp
